--- a/Homeworks/0_cpp_warmup/samples/CMakeLists.txt
+++ b/Homeworks/0_cpp_warmup/samples/CMakeLists.txt
@@ -1,5 +1,11 @@
 cmake_minimum_required(VERSION 3.27 FATAL_ERROR)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+if(MSVC)
+    add_compile_options("/std:c++17")
+endif()
+
 project(CppPractices VERSION 1.0)
 message(STATUS "[Project] ${PROJECT_NAME} ${PROJECT_VERSION}")
 
